<resources>
    <string name="app_name">DICE ROLLER</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="about_text">"This is a small mobile game where a player can roll 5 dices at a time and score will be calculated using the values get from the dices. User can set a target before the start of play and the first one to win the round. Player can select to play with computer and another player" \n \n "Mujithaba Farahi"   </string>
    <string name="throw_button">Throw Dice</string>
    <string name="win_messege">""\n"" \n "YOU WIN!"</string>
    <string name="lose_messege">""\n ""\n "YOU LOSE!"</string>
    <string name="target">Target :</string>
    <string name="target_val">101</string>
    <string name="roller">Roller</string>
    <string name="dice">Dice</string>
    <string name="computer_dices">Computer Dices</string>
    <string name="player_dices">Player Dices</string>
    <string name="throw_">Throw</string>
    <string name="scores">Scores</string>
    <string name="temp">--</string>
    <string name="human">Human :</string>
    <string name="computer">Computer :</string>
    <string name="h_c">H:0 / C:0</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="ok">OK</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="score">Score</string>
    <string name="__">--</string>
    <string name="player_scores">P1:0 / P2:0</string>
    <string name="player_2">Player 2:</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2_dices">Player 2 Dices</string>
    <string name="player_1_dices">Player 1 Dices</string>
    <string name="vs_computer">vs Computer</string>
    <string name="_2_players">2 Players</string>
    <string name="dice_no_5">Dice No.5</string>
</resources>