<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/hDice1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hDice2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/dice_one" />

    <ImageView
        android:id="@+id/hDice2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hDice3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/dice_two" />

    <ImageView
        android:id="@+id/hDice3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/dice_three" />

    <ImageView
        android:id="@+id/hDice4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hDice3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/dice_four" />

    <ImageView
        android:id="@+id/hDice5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hDice4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/dice_five" />

    <ImageView
        android:id="@+id/cDice5"
        android:layout_width="70dp"
        android:layout_height="70dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cDice4"
        app:layout_constraintTop_toBottomOf="@+id/hDice5"
        app:layout_constraintVertical_bias="0.321"
        app:srcCompat="@drawable/dice_five5" />

    <ImageView
        android:id="@+id/cDice4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cDice3"
        app:layout_constraintTop_toBottomOf="@+id/hDice4"
        app:layout_constraintVertical_bias="0.321"
        app:srcCompat="@drawable/dice_four4" />

    <ImageView
        android:id="@+id/cDice3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hDice3"
        app:layout_constraintVertical_bias="0.321"
        app:srcCompat="@drawable/dice_three3" />

    <ImageView
        android:id="@+id/cDice2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cDice3"
        app:layout_constraintTop_toBottomOf="@+id/hDice2"
        app:layout_constraintVertical_bias="0.321"
        app:srcCompat="@drawable/dice_two2" />

    <ImageView
        android:id="@+id/cDice1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cDice2"
        app:layout_constraintTop_toBottomOf="@+id/hDice1"
        app:layout_constraintVertical_bias="0.321"
        app:srcCompat="@drawable/dice_one1" />

    <Button
    android:id="@+id/rollButton"
    android:layout_width="105dp"
    android:layout_height="50dp"
    android:layout_marginBottom="148dp"
    android:backgroundTint="@color/red_44"
    android:text="@string/throw_"
    android:textAlignment="center"
    android:textAllCaps="true"
    android:textColor="@color/black"
    android:textStyle="bold|italic"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/scoreButton"
    app:layout_constraintHorizontal_bias="0.699"
    app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="148dp"
        android:backgroundTint="@color/red_44"
        android:text="@string/score"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cDice4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/humanDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_dices"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/hDice3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/compDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_dices"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cDice3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
    android:id="@+id/humanScore"
    android:layout_width="30dp"
    android:layout_height="20dp"
    android:textColor="@color/white"
    android:layout_marginTop="52dp"
    android:layout_marginEnd="10dp"
    android:text="@string/__"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.989"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/compScore"
    android:layout_width="30dp"
    android:layout_height="20dp"
    android:layout_marginTop="80dp"
    android:layout_marginEnd="10dp"
    android:text="@string/__"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.989"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/humanScoreTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="52dp"
    android:text="@string/human"
    android:textColor="@color/white"
    app:layout_constraintEnd_toStartOf="@+id/humanScore"
    app:layout_constraintHorizontal_bias="0.942"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/compScoreTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="5dp"
    android:text="@string/computer"
    android:textColor="@color/white"
    app:layout_constraintEnd_toStartOf="@+id/compScore"
    app:layout_constraintHorizontal_bias="0.954"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/humanScoreTitle" />

<TextView
    android:id="@+id/winLoseCount"
    android:layout_width="85dp"
    android:layout_height="21dp"
    android:layout_marginTop="52dp"
    android:text="@string/h_c"
    android:textColor="@color/white"
    app:layout_constraintEnd_toStartOf="@+id/humanScoreTitle"
    app:layout_constraintHorizontal_bias="0.088"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>